Bug:  822310 Reviewer:  Self Comments:  Added a horizontal scroll bar to a task listing when neccessary.
Files:
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -3619,8 +3619,7 @@ top:100px;
 .gwtTaskListing
 {
 	font-size: 1.35em; 
-	overflow-y: auto;
-	overflow-x: hidden;
+	overflow: auto;
 	border: 1px solid #cccccc;
 }
 .gwtTaskListing_IE
